--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -24,6 +24,12 @@
         </ul>
         <ul class="hidden-links hidden"></ul>
       </nav>
+      <!-- Lab logo / banner -->
+      <div style="text-align:center; margin-top:10px;">
+        <img src="{{ '/images/iodq-2.png' | relative_url }}"
+         alt="IODQ Lab Logo"
+         style="max-width:220px; height:auto;">
+     </div>
     </div>
   </div>
 </div>
