--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -26,7 +26,7 @@
       </nav>
       <!-- Lab logo / banner -->
       <div style="text-align:center; margin-top:10px;">
-        <img src="{{ '/images/iodq-2.png' | relative_url }}"
+        <img src="{{ '/images/IODQ-2.png' | relative_url }}"
          alt="IODQ Lab Logo"
          style="max-width:220px; height:auto;">
      </div>
