--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -11,8 +11,8 @@
           <li class="masthead__menu-item masthead__menu-item--lg persist">
   <a href="{{ base_path }}/" style="display:flex; align-items:center;">
     <img src="{{ '/images/IODQ-2.png' | relative_url }}"
-         alt="IODQ Lab"
-         style="height:42px; width:auto; margin-right:8px;">
+         alt="IODQ Lab Logo"
+         style="height:75px; max-height:75px; width:auto; margin-right:12px;">
   </a>
 </li>
           {% for link in site.data.navigation.main %}
