--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,9 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
+
+/* --- Custom IODQ Logo size --- */
+.site-title img {
+  max-height: 120px;
+  height: auto;
+}
