Reduce header height with padding adjustments
Added padding to masthead and masthead inner wrap.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,4 +46,15 @@
 .site-title img {
   max-height: 120px;
   height: auto;
+   /* Reduce header height */
+.masthead {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.masthead__inner-wrap {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 }
