--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -9,10 +9,10 @@
             <a href="{{ base_path }}/">{{ site.title }}</a>
           </li> -->
           <li class="masthead__menu-item masthead__menu-item--lg persist">
-  <a href="{{ base_path }}/News/" style="display:flex; align-items:center;">
+  <a href="{{ base_path }}/news/" style="display:flex; align-items:center;">
     <img src="{{ '/images/IODQ-1.png' | relative_url }}"
          alt="IODQ Lab Logo"
-         style="height:310px; max-height:310px; width:auto; margin-right:0px;">
+         style="height:110px; max-height:110px; width:auto; margin-right:0px;">
   </a>
 </li>
           {% for link in site.data.navigation.main %}
