--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -65,10 +65,11 @@
   max-width: 220px;   /* 原本大多是 120px */
   max-height: 220px;
 }
-
+<!--
 .author__avatar img {
   border-radius: 0;   /* 取消圓角 */
-}-->
+}
+-->
 
 <!--
 /* 1. 縮小 Logo 高度，這會同步縮小標題欄位的高度 */
