--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -375,3 +375,18 @@
 .gallery-title{ font-weight: 800; margin-bottom: 4px; }
 .gallery-desc{ opacity:.85; line-height: 1.55; }
 
+.photo-desc {
+  margin-top: 0.5rem;
+  font-size: 0.95rem;
+  line-height: 1.6;
+}
+
+.photo-list {
+  margin: 0.5rem 0 0 1.1rem;
+  padding: 0;
+}
+
+.photo-list li {
+  margin-bottom: 0.3rem;
+}
+
