--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -454,3 +454,10 @@
   text-decoration: underline;
 }
 
+.section-header{
+  font-weight: 800;
+  letter-spacing: .4px;
+  margin: 28px 0 12px;
+  padding-left: 10px;
+  border-left: 4px solid #b91c1c; /* 可改你主色 */
+}
